@@ -2,7 +2,7 @@
 DSSI
 ----
 
-This is the Disposable Soft Synth Interface specification & example
+This is the DSSI Soft Synth Interface specification & example
 code repository.
 
 You'll find here:
@@ -49,7 +49,7 @@ needed to compile DSSI applications, you only need the following:
 To build the included host and plugins, you will also need:
 
   JACK
-  liblo-0.12 or above: http://www.plugin.org.uk/liblo/
+  liblo-0.12 or above: http://liblo.sourceforge.net/
   libsndfile: http://www.mega-nerd.com/libsndfile/
   libsamplerate: http://www.mega-nerd.com/SRC/
 
