@@ -1,0 +1,45 @@
+.\"                                      Hey, EMACS: -*- nroff -*-
+.\" First parameter, NAME, should be all caps
+.\" Second parameter, SECTION, should be 1-8, maybe w/ subsection
+.\" other parameters are allowed: see man(7), man(1)
+.TH dssi_osc_update 1 "January 5th, 2009"
+.\" Please adjust this date whenever revising the manpage.
+.\"
+.\" Some roff macros, for reference:
+.\" .nh        disable hyphenation
+.\" .hy        enable hyphenation
+.\" .ad l      left justify
+.\" .ad b      justify to both left and right margins
+.\" .nf        disable filling
+.\" .fi        enable filling
+.\" .br        insert line break
+.\" .sp <n>    insert n+1 empty lines
+.\" for manpage-specific macros, see man(7)
+.SH NAME
+dssi_osc_update
+.SH SYNOPSIS
+.B dssi_osc_update
+.I <OSC URL>
+.SH DESCRIPTION
+.B dssi_osc_update
+sends a DSSI `update' OSC request to a DSSI host, then waits for OSC
+responses from the host, writes any responses received to stdout,
+and exits when it has not received anything for five seconds.  DSSI
+hosts should respond to an `update' request by sending the complete
+state of the plugin; this program can be used to retrieve and
+display that state.
+.SH OPTIONS
+.TP
+.B <OSC URL>
+The URL specifying the host and plugin, to which the request is sent.
+This is typically obtained from the host, perhaps from startup
+messages or the host's `About' dialog. For example:
+  osc.udp://localhost:19383/dssi/test.1
+  osc.udp://my.host.org:10886/dssi/xsynth-dssi/Xsynth/chan00
+.SH SEE ALSO
+.BR dssi_osc_send (1).
+.br
+.SH AUTHOR
+This manual page was originally created by Mark Hymers from the help
+text of the application, for the Debian project (but may be freely
+used by others).
