@@ -2,7 +2,7 @@
 
 /* jack-dssi-host.c
  *
- * Disposable Soft Synth Interface
+ * DSSI Soft Synth Interface
  *
  * This is a host for DSSI plugins.  It listens for MIDI events on an
  * ALSA sequencer port, delivers them to DSSI synths and outputs the
@@ -20,7 +20,7 @@
  */
 
 /*
- * Copyright 2004, 2008 Chris Cannam, Steve Harris and Sean Bolton.
+ * Copyright 2004, 2009 Chris Cannam, Steve Harris and Sean Bolton.
  * 
  * Permission to use, copy, modify, distribute, and sell this software
  * for any purpose is hereby granted without fee, provided that the
